// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanBook cleanBook 1`] = `
{
  "authors": [
    "Yaa Gyasi",
  ],
  "categories": [
    "Fiction",
  ],
  "dateAdded": undefined,
  "dateFinished": "2020-09-12",
  "dateStarted": undefined,
  "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
  "isbn": "0525658181",
  "language": "en",
  "link": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
  "notes": "I loved it!",
  "pageCount": 288,
  "printType": "BOOK",
  "publishedDate": "2020",
  "status": "finished",
  "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
  "title": "Transcendent Kingdom",
}
`;

exports[`cleanBook cleanBook with rating 1`] = `
{
  "authors": [
    "Yaa Gyasi",
  ],
  "categories": [
    "Fiction",
  ],
  "dateAdded": undefined,
  "dateFinished": "2020-09-12",
  "dateStarted": undefined,
  "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
  "isbn": "0525658181",
  "language": "en",
  "link": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
  "notes": "I loved it!",
  "pageCount": 288,
  "printType": "BOOK",
  "publishedDate": "2020",
  "rating": "⭐️⭐️⭐️⭐️⭐️",
  "status": "finished",
  "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
  "title": "Transcendent Kingdom",
}
`;

exports[`cleanBook cleanBook, no date 1`] = `
{
  "authors": [
    "Yaa Gyasi",
  ],
  "categories": [
    "Fiction",
  ],
  "dateAdded": undefined,
  "dateFinished": undefined,
  "dateStarted": undefined,
  "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
  "isbn": "0525658181",
  "language": "en",
  "link": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
  "notes": "I loved it!",
  "pageCount": 288,
  "printType": "BOOK",
  "publishedDate": "2020",
  "status": "finished",
  "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
  "title": "Transcendent Kingdom",
}
`;

exports[`cleanBook cleanBook, some metadata 1`] = `
{
  "authors": [
    "Author Name",
  ],
  "categories": [],
  "dateAdded": undefined,
  "dateFinished": undefined,
  "dateStarted": "2022-01-01",
  "isbn": "1234597890",
  "language": "en",
  "pageCount": 584,
  "printType": "BOOK",
  "publishedDate": "2013",
  "status": "started",
  "title": "Book Title",
}
`;
